@@ -18,7 +18,7 @@ class ConditionPermissionTest extends \Tester\TestCase {
   }
   
   public function testGetName() {
-    Assert::type("string", $this->condition->getName());
+    Assert::same("acl", $this->condition->getName());
   }
   
   public function testIsAllowed() {
